--- a/themes/blairos/source/css/_partial/article.styl
+++ b/themes/blairos/source/css/_partial/article.styl
@@ -9,7 +9,7 @@
 //by blair add
 .article-myself
   margin-left: 8px
-  color: #333
+  color: orange
   &:before
     font-family: "FontAwesome";
     -webkit-font-smoothing: antialiased;
@@ -20,7 +20,7 @@
 .article-myEmail
   margin-left: 8px
   font-size: 1em
-  color: #333
+  color: orange
   &:before
     font-family: "FontAwesome";
     -webkit-font-smoothing: antialiased;
@@ -29,7 +29,7 @@
   span
 .article-myGithub
   margin-left: 8px
-  color: #333
+  color: orange
   &:before
     font-family: "FontAwesome";
     -webkit-font-smoothing: antialiased;
@@ -38,7 +38,7 @@
   span
 .article-myInstagram
   margin-left: 8px
-  color: #333
+  color: orange
   &:before
     font-family: "FontAwesome";
     -webkit-font-smoothing: antialiased;
@@ -47,7 +47,7 @@
   span
 .article-myFacebook
   margin-left: 8px
-  color: #333
+  color: orange
   &:before
     font-family: "FontAwesome";
     -webkit-font-smoothing: antialiased;
@@ -56,7 +56,7 @@
   span
 .article-myTwitter
   margin-left: 8px
-  color: #333
+  color: orange
   &:before
     font-family: "FontAwesome";
     -webkit-font-smoothing: antialiased;
@@ -65,7 +65,7 @@
   span
 .article-myKaggle
   margin-left: 8px
-  color: #333
+  color: orange
   &:before
     font-family: "FontAwesome";
     -webkit-font-smoothing: antialiased;
@@ -74,7 +74,7 @@
   span
 .article-mySegmentfault
   margin-left: 8px
-  color: #333
+  color: orange
   &:before
     font-family: "FontAwesome";
     -webkit-font-smoothing: antialiased;
@@ -205,9 +205,9 @@
   font-weight: 599
 
 .article-title-index
-  font-family: Consolas; 
+  font-family: Consolas;
   font-size: 1.18em
-  //font-size: 14px // by blair add 160728 
+  //font-size: 14px // by blair add 160728
   font-weight: 600 // by blair 160728
   //width: 98%;
   //line-height: 150%;
@@ -271,7 +271,7 @@ a.article-title
     line-height: 1.4em
     margin: line-height-title 0
     // add by blair 0724
-    color: #444;
+    color: orange;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     line-height: 150%;
@@ -315,7 +315,7 @@ a.article-title
     padding-left: 1%;
     border-left: 2px solid #009a61;
     background: #F6F6F6; // add by blair 20170105
-    //background: #f6f6f6; 
+    //background: #f6f6f6;
     //color: #555;
     //color: #808080;
     //color: #777777;
@@ -450,7 +450,7 @@ a.article-title
   margin-top: 0.5em
 
 .article-gallery
-  background: #000
+  background: orange
   position: relative
 
 .article-gallery-photos
@@ -473,7 +473,7 @@ a.article-title
 .article-toc
   display: none
   position: fixed
-  
+
   left: 50% // yuan
   top: 110px
   font-size: 1.0em
